[package]
name = "apsp_mt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bucket_queue = "2.0.0"
rayon = "1.0"
clap = { version = "3.1.15", features = ["derive"] }
ndarray = { version = "0.15.4", features = ["serde", "rayon"] }
ndarray-npy = "0.8.1"
rand = "0.8.5"
